fixed spacing on mobile sizes

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,8 @@
 }
 
 .event-description {
-  margin-top: 80px;
+  margin-top: 35px;
+  font-size: 16px;
 }
 
 /* RSVP Form */
